# ml-stuff

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  SETUP.md  pyproject.toml  requirements.txt  setup.sh  train_resnet18_cifar.py  train_resnet_cifar.py
GPT/: README.md  benchmark_amp.py  benchmark_attention.py  benchmark_flash_attention.py  bpe.py  diagnostics.py  model.py  runner.sh  train.py  utils.py
GPT/misc/: testing.ipynb
GPT/runs/bs128_scaledlr/: events.out.tfevents.1766810493.7c56a744f8d8.16316.0
LoRA/: README.md  basic.ipynb  bert_lora.py  bert_plot.py  theory.py
MoE/: baseline.py  collapse.py  data.py  ood.py  visualization.py  viz_utils.py
MoE/baseline/: utilization.py
MoE/misc/: README.md  alpha_sweep.py  routing_utils.py  visualization.py  viz_utils.py
RL/: README.md  a2c.py  actor_critic.py  dqn.py  net.py  ppo.py  ppo_cont.py  ppo_continuous.py  reinforce.py  sac.py  util.py
RLHF/: engine.py
RLHF/data/: collate.py  debug.py  formats.py  tokenize.py
RLHF/test/: __init__.py  debug_padding.py  debug_padding2.py  test_data.py  test_data_func.py  test_engine.py
RLHF/train/: dpo.py  ipo.py  overfit_dpo.py
VAE/: model.py  train.py
VAE/runs/fast/: config.json  (+1 more)
ViT/: model.py  train_cifar.py
bayesian/: README.md  bayes_by_backprop.py  bayesian_linreg.py  deep_ensembles.py  laplace.py  mc_dropout.py  ood_detection.py  uncertainty_types.py
ddpm/: README.md  config.py  data.py  diffusion.py  model.py  sample.py  train.py
gpt/: benchmark_amp.py  benchmark_attention.py  benchmark_flash_attention.py  bpe.py  diagnostics.py  model.py  train.py
gpt/misc/: testing.ipynb
gpt_from_scratch/: model.py  train.py
latent_diffusion/: README.md  config.py  diffusion.py  evaluate.py  model.py  train_latent.py
misc/: train_cnn_cifar.py
misc/notebooks/: attention.ipynb  resnet.ipynb
misc/quantization/: README.md  gpt_awq.py  gpt_gptq.py  gpt_ptq.py  gpt_smoothquant.py  ptq_utils.py  quantize.py  quantized_linear.py
models/: resnet.py
moe-surgery/: visualization.py
neural_ode/: README.md  augmented_ode.py  cnf.py  latent_ode.py  neural_ode.py  ode_basics.py  regularization.py
notebooks/: attention.ipynb  resnet.ipynb
optim/: optimizers.py  test_optimizers.py
quant/: compare_quant.py  quant_eval.py  quantization.py
quant/results/: baseline_Qwen_Qwen2.5-1.5B.json  quant_4bit_inc-q_proj_k_proj_v_proj_o_proj_exc-embed_tokens_lm_head_norm_Qwen_Qwen2.5-1.5B.json
quantization/: README.md  compare_quant.py  decoder_ptq.py  gpt_awq.py  gpt_gptq.py  gpt_ptq.py  ptq_utils.py  quant_eval.py  quantization.py  quantize.py  run_baseline.py  test_quantize_stage0.py
quantization/results/: quant_4bit_inc-all_exc-embed_tokens_lm_head_norm_Qwen_Qwen2.5-1.5B.json  quant_4bit_inc-q_proj_k_proj_v_proj_o_proj_exc-embed_tokens_lm_head_norm_Qwen_Qwen2.5-1.5B.json  quant_8bit_inc-all_exc-embed_tokens_lm_head_norm_Qwen_Qwen2.5-1.5B.json
resnet/: README.md  config.py  model.py  run_ablations.py  train_cifar.py  utils.py
runs/Pendulum-v1__test__1__1765608922/: events.out.tfevents.1765608922.c83c44344dfc.44233.0
runs/Pendulum-v1__test__1__1765609103/: events.out.tfevents.1765609103.c83c44344dfc.45697.0
runs/a2c_lr=0.001_gamma=0.99_lam=0.95/: events.out.tfevents.1765520109.64ed29fd55d8.59686.0  events.out.tfevents.1765520301.64ed29fd55d8.60439.0
runs/ppo_lr=0.0003_gamma=0.99_lam=0.95_clip-eps=0.2/: events.out.tfevents.1765521371.64ed29fd55d8.63746.0  events.out.tfevents.1765521708.64ed29fd55d8.64455.0  events.out.tfevents.1765610946.c83c44344dfc.48401.0  events.out.tfevents.1765611000.c83c44344dfc.48642.0
runs/reinforce_lr=0.001_gamma=0.99/: events.out.tfevents.1765520757.64ed29fd55d8.61195.0  events.out.tfevents.1765520809.64ed29fd55d8.61512.0
runs/simclr_bs=512_temp=0.2/: events.out.tfevents.1765517502.64ed29fd55d8.44502.0
runs/simclr_bs=512_temp=0.5/: events.out.tfevents.1765518392.64ed29fd55d8.50651.0
simclr/: knn.py  linear_probe.py  model.py  pretrain.py  util.py
utils/: cifar.py
vae/: config.py  model.py  train.py
(+101 files in other folders)
