[project]
name = "ml-stuff"
version = "0.1.0"
description = "Machine learning experiments for self-study"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    # Core ML
    "torch>=2.0",
    "torchvision",
    "einops",
    "numpy",
    "scipy",

    # Hugging Face ecosystem
    "transformers",
    "datasets",
    "accelerate",
    "safetensors",
    "tokenizers",
    "huggingface-hub",
    "peft",
    "trl",
    "bitsandbytes; sys_platform == 'linux'",

    # Visualization & data
    "matplotlib",
    "seaborn",
    "pandas",
    "pillow",

    # RL
    "gymnasium",

    # Jupyter
    "jupyter",
    "jupyterlab",
    "ipywidgets",

    # Utilities
    "tqdm",
    "pyyaml",
    "tensorboard",
]

[project.optional-dependencies]
dev = [
    "ruff",
    "pytest",
]

[tool.uv]
package = false
# Use PyTorch's CUDA 12.4 index for Linux, default index for Mac
index-strategy = "unsafe-best-match"

[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true

[tool.uv.sources]
# On Linux, use CUDA wheels; on Mac, use default PyPI (which has MPS support)
torch = [
    { index = "pytorch-cu124", marker = "sys_platform == 'linux'" },
]
torchvision = [
    { index = "pytorch-cu124", marker = "sys_platform == 'linux'" },
]
