[project]
name = "ml-stuff"
version = "0.1.0"
description = "Machine learning experiments for self-study"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    # Core ML
    "torch>=2.0",
    "torchvision",
    "einops",
    "numpy",
    "scipy",
    # Hugging Face ecosystem
    "transformers",
    "datasets",
    "accelerate",
    "safetensors",
    "tokenizers",
    "huggingface-hub",
    "peft",
    "trl",
    "bitsandbytes; sys_platform == 'linux'",
    # Visualization & data
    "matplotlib",
    "seaborn",
    "pandas",
    "pillow",
    # RL
    "gymnasium",
    # Jupyter
    "jupyter",
    "jupyterlab",
    "ipywidgets",
    # Utilities
    "tqdm",
    "pyyaml",
    "tensorboard",
    "scikit-learn>=1.7.2",
]

[project.optional-dependencies]
dev = [
    "ruff",
    "pytest",
    "pre-commit",
]

[tool.uv]
package = false
# Use PyTorch's CUDA 12.4 index for Linux, default index for Mac
index-strategy = "unsafe-best-match"

[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true

[tool.uv.sources]
# On Linux, use CUDA wheels; on Mac, use default PyPI (which has MPS support)
torch = [
    { index = "pytorch-cu124", marker = "sys_platform == 'linux'" },
]
torchvision = [
    { index = "pytorch-cu124", marker = "sys_platform == 'linux'" },
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort (import sorting)
    "UP",     # pyupgrade (modernize syntax)
    "B",      # flake8-bugbear (common bugs)
]
ignore = [
    "E501",   # line too long (formatter handles this)
    "B007",   # unused loop control variable
]

[tool.ruff.lint.per-file-ignores]
"**/__init__.py" = ["F401"]  # unused imports ok in __init__
